# addy

./: .gitignore  README.md  app.py  dwarkesh.json  interface.py  pipeline.py  pyproject.toml  sample.env  voices.py
.claude/: CLAUDE.md
addy/: __init__.py  cli.py
config/: sponsors.json
conversational-agent/: .env.example  README.md  package.json
conversational-agent/components/: ConvAI.tsx
output/: ads.json
podcast/src/app/: uploader.tsx
server/: .gitignore
server/recorded/: app.py  interface.py  pipeline.py  requirements.txt  sample.env  service.py  voices.py
server/recorded/config/: sponsors.json
server/recorded/web/: README.md
server/recorded/web/src/app/result/: page.tsx  poll.tsx
voice-agent/: .env.example  README.md  main.py  pyproject.toml
web/: README.md  package.json
web/src/app/: layout.tsx  page.tsx  uploader.tsx
web/src/app/result/: page.tsx
