[project]
name = "addy"
version = "0.1.0"
description = "YouTube podcast ad placement: transcript, sponsors JSON, Cartesia TTS."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.39.0",
    "cartesia>=0.14.0",
    "google-genai>=1.0.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "youtube-transcript-api>=0.6.0",
]

[project.scripts]
addy = "addy.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["addy"]
