[project]
name = "voice-agent"
version = "0.1.0"
description = "Dwarkesh podcast voice agent — Anthropic + Cartesia Line"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cartesia-line",
    "python-dotenv",
]

[tool.hatch.build.targets.wheel]
packages = []
only-include = ["main.py"]
